--- a/ui/app/i18n/registration/locale_en.json
+++ b/ui/app/i18n/registration/locale_en.json
@@ -50,11 +50,13 @@
   "REGISTRATION_LABEL_VALID_PATIENT_IDENTIFIER":"Please enter a valid patient identifier",
   "REGISTRATION_LABEL_PROVIDER_AUTOCOMPLETE_LIST":"Please select a provider from the autocomplete list",
   "REGISTRATION_LABEL_PATIENT_AUTOCOMPLETE_LIST":"Please select a patient from the autocomplete list",
-  "REGISTRATION_LABEL_ENTER_NAME":"Enter Name",
+  "REGISTRATION_LABEL_ENTER_NAME":"Enter First Name",
+  "REGISTRATION_LABEL_ENTER_LAST_NAME":"Enter Last Name",
   "REGISTRATION_LABEL_PERSON_NOT_FOUND":"Person not found",
   "REGISTRATION_LABEL_PATIENT_ID":"ID",
   "REGISTRATION_LABEL_SEARCH":"Search",
-  "REGISTRATION_LABEL_NAME":"Name",
+  "REGISTRATION_LABEL_NAME":"First Name",
+  "REGISTRATION_LABEL_LAST_NAME":"Last Name",
   "REGISTRATION_LABEL_ID":"ID",
   "REGISTRATION_LABEL_NO_RESULTS":"No more results",
   "REGISTRATION_LABEL_SUMMARY":"Summary",
