--- a/i18n/appointments/locale_en.json
+++ b/i18n/appointments/locale_en.json
@@ -100,6 +100,8 @@
   "APPOINTMENT_CREATE_OUTOF": "out of",
   "APPOINTMENT_PATIENT_ID": "Patient ID",
   "APPOINTMENT_PATIENT_NAME": "Patient Name",
+  "APPOINTMENT_PATIENT_AGE" :"Age",
+  "APPOINTMENT_PATIENT_SEX" :"Sex",
   "APPOINTMENT_CHECKIN_TIME_KEY": "Check in time",
   "APPOINTMENT_SERVICE_TYPE_FULL": "Service Appointment Type",
   "APPOINTMENT_WALK_IN": "Walk In",
