--- a/i18n/appointments/locale_en.json
+++ b/i18n/appointments/locale_en.json
@@ -99,9 +99,12 @@
   "APPOINTMENT_CREATE_AVAL": "Available",
   "APPOINTMENT_CREATE_OUTOF": "out of",
   "APPOINTMENT_PATIENT_ID": "Patient ID",
+  "APPOINTMENT_FILE_NUMBER": "File Number",
   "APPOINTMENT_PATIENT_NAME": "Patient Name",
   "APPOINTMENT_PATIENT_AGE" :"Age",
   "APPOINTMENT_PATIENT_SEX" :"Sex",
+  "APPOINTMENT_PATIENT_VILLAGE" :"Village",
+  "APPOINTMENT_PATIENT_CONTACTS" :"Contacts",
   "APPOINTMENT_CHECKIN_TIME_KEY": "Check in time",
   "APPOINTMENT_SERVICE_TYPE_FULL": "Service Appointment Type",
   "APPOINTMENT_WALK_IN": "Walk In",
