Revert "release code for the cag module"

--- a/i18n/registration/locale_en.json
+++ b/i18n/registration/locale_en.json
@@ -56,10 +56,6 @@
   "REGISTRATION_LABEL_PERSON_NOT_FOUND":"Person not found",
   "REGISTRATION_LABEL_PATIENT_ID":"ID",
   "REGISTRATION_LABEL_PATIENT_ID_HIE":"ECID",
-  "REGISTRATION_LABEL_CAG_NAME":"CAG Name",
-  "REGISTRATION_CREATE_NEW_CAG_CONFIG_KEY":"Create New CAG",
-  "REGISTRATION_LABEL_CAG_ID":"CAG id",
-  "REGISTRATION_LABEL_CAG_NAME_PLACEHOLDER": "Enter CAG name",
   "REGISTRATION_LABEL_SEARCH":"Search",
   "REGISTRATION_LABEL_NAME":"First Name",
   "REGISTRATION_LABEL_LAST_NAME":"Last Name",
@@ -68,7 +64,6 @@
   "REGISTRATION_LABEL_NO_RESULTS":"No more results",
   "REGISTRATION_LABEL_SUMMARY":"Summary",
   "REGISTRATION_LABEL_CLOSE_VISIT":"Close Visit",
-  "REGISTRATION_LABEL_CLOSE_CAG_VISIT": "Close CAG Visit",
   "REGISTRATION_LABEL_YES":"Yes",
   "REGISTRATION_LABEL_NO":"No",
   "REGISTRATION_LABEL_SAVE":"<u>S</u>ave",
@@ -123,9 +118,5 @@
   "PROGRAM_DELETE_REASON_PLACEHOLDER": "Reason to delete the program",
   "DELETE_LABEL": "Delete",
   "EDIT_LABEL": "Edit",
-  "REGISTRATION_LABEL_RELATIONSHIP_EXISTS": "Given relationship already exists",
-  "REGISTRATION_LABEL_NEW_CAG" : "NEW CAG",
-  "REGISTRATION_LABEL_PATIENT_ENTERCAGNAME" :"Enter CAG Name",
-  "REGISTRATION_LABEL_CAG_ENTER_NAME" : "Enter CAG name."
- 
+  "REGISTRATION_LABEL_RELATIONSHIP_EXISTS": "Given relationship already exists"
 }
